# replic-arma

./: .eslintrc.cjs  .eslintrc.js  .gitignore  .prettierrc  Cargo.toml  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite-plugin-tauri.ts  vite.config.ts  vitest.config.ts  vue.config.js
.github/workflows/: artifacts.yml  build.yml  main.yml  publish.yml  release..yml  release.yml  website.yml
docs/: a3s.md  readme.md
frontend/: .eslintrc.cjs  .gitignore  .prettierrc  package-lock.json  package.json  tsconfig.json  tsconfig.vite-config.json  vitest.config.ts
frontend/src/components/: DeepLink.vue  Mod.vue  ModsetMod.vue
frontend/src/composables/: useCollection.ts  useModsetStatus.ts  useRepository.ts
frontend/src/models/: Download.ts
frontend/src/store/: cache.ts  download.ts  hash.ts  repo.ts  route.ts
frontend/src/styles/: global.scss
frontend/src/util/: Errors.ts  worker.ts
frontend/src/views/: Modset.vue  Repositories.vue  Repository.vue  Setup.vue
frontend/test/unit/: cache-creation.test.ts
public/: index.html
ra_core/: Cargo.toml
ra_core/src/: lib.rs  modset.rs  repository.rs
ra_core/src/repos/a3s/: constants.rs  mod.rs  repository.rs  utils.rs
ra_core/src/repos/a3s/classes/a3s/: mod.rs  serverinfo.rs  sync.rs
ra_core/src/repos/a3s/classes/java/: arraylist.rs  date.rs  mod.rs
ra_core/src/repos/swifty/: mod.rs
ra_core/src/util/: methods.rs  mod.rs  types.rs
scripts/: release.mjs  update-latest.cjs  update-latest.mjs
src/: App.vue  main.ts
src-tauri/: .gitignore  Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  repository.rs  state.rs
src-tauri/src/a3s/: constants.rs  mod.rs  repository.rs  utils.rs
src-tauri/src/a3s/classes/: mod.rs
src-tauri/src/a3s/classes/a3s/: autoconfig.rs  changelogs.rs  events.rs  mod.rs  serverinfo.rs  sync.rs
src-tauri/src/a3s/classes/java/: arraylist.rs  date.rs  hashmap.rs  hashset.rs  mod.rs
src-tauri/src/commands/: discord.rs  mod.rs  repo.rs  util.rs
src-tauri/src/commands/a3s/: check_a3s.rs  download.rs  mod.rs
src-tauri/src/commands/utils/: download_client.rs  hash.rs  mod.rs  types.rs
src-tauri/src/repos/a3s/: constants.rs  mod.rs  repository.rs  utils.rs
src-tauri/src/repos/a3s/classes/: mod.rs
src-tauri/src/repos/a3s/classes/a3s/: autoconfig.rs  changelogs.rs  events.rs  serverinfo.rs  sync.rs
src-tauri/src/repos/a3s/classes/java/: arraylist.rs  hashmap.rs  hashset.rs  mod.rs
src-tauri/src/repos/swifty/: repository.rs
src-tauri/src/statemanager/: dir_manager.rs  mod.rs  repo_manger.rs  state.rs
src-tauri/src/swifty/: mod.rs  repository.rs
src-tauri/src/util/: download.rs  methods.rs  mod.rs  types.rs
src/assets/locales/: de.json  en.json
src/components/: CollectionAdd.vue  CollectionItem.vue  CollectionMods.vue  DLCList.vue  DeepLink.vue  HelloWorld.vue  LaunchOptions.vue  LocalModList.vue  Mod.vue  ModListItem.vue  ModModsetList.vue  Modlist.vue  Modset.vue  ModsetAdd.vue  ModsetList.vue  ModsetMod.vue  PlayButton.vue  Repo.vue  RepoSettings.vue  Repository.vue  RepositoryAdd.vue  RepositorySettings.vue  Server.vue  Subnavi.vue
src/components/Collection/: CollectionAdd.vue  CollectionItem.vue  CollectionModsetList.vue  Modlist.vue
src/components/CollectionEdit/: CollectionDLC.vue  CollectionModset.vue  CollectionModsetModlist.vue  CollectionModsetModlistMod.vue  LocalMod.vue
src/components/Download/: DownloadItem.vue  DownloadProgess.vue
src/components/Modset/: ModsetAdd.vue  ModsetItem.vue
src/components/Repository/: RepositoryItem.vue  Settings.vue
src/components/Server/: ServerItem.vue
src/components/Settings/: ApplicationSettings.vue  Launch.vue
src/components/Setup/: Executable.vue  FirstRepository.vue  ModDirectory.vue
src/components/collection/: CollectionAdd.vue  CollectionDLC.vue  CollectionItem.vue  CollectionModlist.vue  CollectionModset.vue  CollectionModsetList.vue  CollectionModsetModlist.vue  CollectionModsetModlistMod.vue  Modlist.vue
src/components/download/: DownloadItem.vue  DownloadProgess.vue  Downloads.vue
src/components/modset/: ModsetAdd.vue  ModsetItem.vue
src/components/repository/: RepositoryAdd.vue  RepositoryItem.vue  Settings.vue
src/components/server/: ServerItem.vue
src/components/settings/: About.vue  ApplicationSettings.vue  General.vue  GeneralRepo.vue  Launch.vue  RepoSettings.vue
src/components/util/: Loader.vue  OnlineStatus.vue  PathSelector.vue  Progress.vue  ReplicCheckbox.vue  ReplicDialog.vue  ReplicFloatingAction.vue  ReplicPathsSelector.vue  Select.vue  Status.vue  Subnavi.vue  Tab.vue  Tabs.vue  Toast.ts  Tooltip.vue  Transition.vue
src/composables/: useCollection.ts  useDeepLink.ts  useModset.ts  useModsetStatus.ts  useRepository.ts
src/locales/: de.json  en.json
src/models/: DeepLink.ts  Download.ts  Error.ts  Repository.ts  Settings.ts
src/plugins/: i18n.ts  router.ts
src/router/: index.ts
src/store/: dialog.ts  download.ts  hash.ts  index.ts  repo.ts  route.ts  settings.ts
src/styles/: global.scss
src/types/: Repository.ts
src/util/: Errors.ts  TypedEventTarget.ts  deflate_worker.ts  format.ts  repository.ts  system.ts  uncompress_worker.ts  worker.ts
src/util/system/: clipboard.ts  compress.ts  config.ts  deep-link.ts  discord.ts  download.ts  download.ts.bak  fs.ts  game.ts  hashes.ts  logger.ts  meta.ts  modset_cache.ts  repos.ts
src/views/: 404.vue  Collection.vue  CollectionEdit.vue  CollectionMods.vue  CollectionsList.vue  Home.vue  Modset.vue  ModsetList.vue  ModsetMods.vue  Repo.vue  RepoSettings.vue  Repos.vue  Repositories.vue  Repository.vue  RepositorySettings.vue  ServerList.vue  Settings.vue  Setup.vue
src/views/Collection/: Edit.vue  Mods.vue
src/views/Modset/: Mods.vue
src/views/Repository/: Collections.vue  Modsets.vue  Servers.vue
src/views/RepositorySettings/: General.vue  (+1 more)
src/worker/: file.worker copy.ts  fileChanges.worker.ts  filePath.worker.ts
test/unit/: launch-parameter.test.ts  repository-update.test.ts
website/: app.vue  package-lock.json  package.json
(+37 files in other folders)
