[workspace]
members = [
  "src-tauri",
  "ra_core"
]


[workspace.dependencies]
serde_json = "1.0.72"
serde = { version = "1.0", features = ["derive"] }
jaded = { version = "0.3.0", features = ["derive", "renaming" ] }
flate2 = { version = "1.0.17", features = ["zlib"], default-features = false }
chrono = { version = "0.4", features = ["serde"] }
curl = { version = "0.4.36", features = ["protocol-ftp"] }
url = "2.2.2"
sha-1 = "0.10.0"
uuid = { version = "1.1.2", features = ["v4", "serde"] }
walkdir = "2"
rayon = "1.5.1"
hex = "0.4.3"
glob = "0.3.0"
anyhow = "1.0.52"
async-trait = "0.1.52"
tokio = { version = "1.20.4", features = ["full"] } # async tests
futures = "0.3.19"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"
filetime = "0.2.15"
tauri-plugin-deep-link = { git = "https://github.com/FabianLars/tauri-plugin-deep-link", rev = "3c5f001f5d4feedfe92693202af3986adab71740" }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
declarative-discord-rich-presence = { git = "https://github.com/KPidS/declarative-discord-rich-presence", rev = "bbe5f1193c595f195e8b61c055a552bf65d70eef" }
once_cell = "1.13"
rs-zsync = { git = "https://github.com/replic-arma/rs-zsync", branch = "file-map-test" }
log = "^0.4"
ra_core = { path = "./ra_core" }
