[package]
name = "ra_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { workspace = true }
serde = { workspace = true }
tauri = { version = "1.3.0", features = ["api-all", "updater"] }
jaded = { workspace = true }
flate2 = { workspace = true }
chrono = { workspace = true }
curl = { workspace = true }
url = { workspace = true }
sha-1 = { workspace = true }
uuid = { workspace = true }
walkdir = { workspace = true }
rayon = { workspace = true }
hex = { workspace = true }
glob = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
hyper = { workspace = true }
hyper-tls = { workspace = true }
filetime = { workspace = true }
tauri-plugin-deep-link = { workspace = true }
tauri-plugin-log = { workspace = true }
declarative-discord-rich-presence = { workspace = true }
once_cell = { workspace = true }
rs-zsync = { workspace = true }
log = { workspace = true }

[target.'cfg(windows)'.dependencies]
winreg = "0.10.1"
windows = { version = "0.33.0", features = [
    "alloc",
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse"
] }

