[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
directories = "4.0.1"
serde_json = "1.0.72"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.8", features =["fs-all", "shell-execute", "shell-open", "dialog-all", "notification-all"]}
jaded = "0.2.0"
flate2 = { version = "1.0.17", features = ["zlib"], default-features = false }
byteorder = "1.3.1"
chrono = "0.4"
curl = { version = "0.4.36", features = ["protocol-ftp"] }
url = "2.2.1"
sha-1 = "0.9.4"
path-slash = "0.x"
threadpool = "1.8.1"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "z"
