[package]
name = "app"
version = "0.1.7-alpha"
description = "Next Generation Arma 3 Mod Launcher that integrates seemlessly with others"
authors = ["RednecksRevenge", "Willard"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
directories = "4.0.1"
serde_json = "1.0.72"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.4", features = ["api-all"] }
jaded = { version = "0.3.0", features = ["derive", "renaming" ] }
flate2 = { version = "1.0.17", features = ["zlib"], default-features = false }
byteorder = "1.3.1"
chrono = { version = "0.4", features = ["serde"] }
curl = { version = "0.4.36", features = ["protocol-ftp"] }
url = "2.2.2"
sha-1 = "0.9.4"
path-slash = "0.x"
threadpool = "1.8.1"
uuid = { version = "0.8.2", features = ["v4", "serde"] }
bimap = "0.6.1"
walkdir = "2"
rayon = "1.5.1"
hex = "0.4.3"
glob = "0.3.0"
anyhow = "1.0.52"
async-trait = "0.1.52"
tokio = { version = "1.15.0", features = ["full"] } # async tests
futures = "0.3.19"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"
filetime = "0.2.15"
tauri-plugin-deep-link = { git = "https://github.com/FabianLars/tauri-plugin-deep-link", rev = "3c5f001f5d4feedfe92693202af3986adab71740" }
once_cell = "1.13"

[target.'cfg(windows)'.dependencies]
winreg = "0.10.1"
windows = { version = "0.33.0", features = [
    "alloc",
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse"
] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
